# lab-semnale

./: .gitmodules  README.md
JPEG/: encode.py  huffman.py  main.py  pyproject.toml  util.py  video.py
lab1/: l1-part2.py  l1.py  l1_ex2.py  lab1.txt  pyproject.toml
lab10/: l1regls.py  pyproject.toml  solves.py
lab2/: ex1.py  ex2-p2.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  pyproject.toml
lab3/: ex1.py  ex2.py  ex3.py  pyproject.toml
lab4/: ex1.py  ex2.py  ex3.py  ex4.txt  ex6.py  ex7.txt  main.py  pyproject.toml
lab5/: ex1.py  pyproject.toml
lab6/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  main.py  pyproject.toml
lab6/lab7/: pyproject.toml
lab7/: ex1.py  ex2.py  lab7.ipynb  pyproject.toml
lab8/: ex1.py  pyproject.toml
lab9/: part1.py  part2.py  pyproject.toml
