[project]
name = "jpeg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio[ffmpeg]>=2.37.2",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pooch>=1.8.2",
    "pyqt5>=5.15.11",
    "scikit-image>=0.26.0",
    "scipy>=1.16.3",
]
